// Vitest Snapshot v1

exports[`hBox box 1`] = `
<span
  class="hbox"
>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
</span>
`;

exports[`rect box 1`] = `
<span
  class=""
  style="margin-bottom: -0.5000em; min-height: 1.5000em; width: 2em;"
/>
`;

exports[`symbol box 1`] = `
<span
  class="box math-i"
  style="height: 0.4306em; line-height: 0.3621em;"
>
  a
</span>
`;

exports[`vBox box 1`] = `
<span
  class="vlist"
  style="vertical-align: 1.0000em; height: 1.9306em;"
>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
  <span
    class="hbox"
    style="top: 1.0694em;"
  >
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
  </span>
</span>
`;

exports[`vBox box 2`] = `
<span
  class="vlist"
  style="vertical-align: 1.0000em; height: 0.4306em;"
>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
</span>
`;

exports[`vStackBox box 1`] = `
<span
  class="vlist"
  style="vertical-align: -2.5694em;"
>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
  <span
    class="hbox"
  >
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
  </span>
</span>
`;
